--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html data-ng-app="compliments">
+<html data-ng-app="emergencyComp">
 <head>
   <meta charset="UTF-8">
   <title>Emergency Compliment</title>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
   <script src="data.js"></script>
   <script src="js/app.js"></script>
-  <script src="js/compliments/compliments.controller.js"></script>
+  <script src="js/emergencyComp/emergencyComp.controller.js"></script>
 </head>
 <body>
   <h1>Emergency Compliment</h1>
+  <div data-ng-controller='emergencyCompController as vm'>
+    <p>{{vm.data}}</p>
+</div>
 
 </body>
 </html>
